chore: update gradle settings to 1.20.6. And starting on reworking all but networking.
I'm afraid to do the networking... so much as changed. Do I even know what my own code still does?